plaatnotes: Refactor sessions api's a bit
